--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.274.0",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
