--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "generate": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@nextui-org/react": "^2.1.10",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
@@ -28,11 +31,13 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "swr": "^2.2.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "fp-ts": "^2.16.1",
